--- a/travel_together_app/travel_together/templates/main/index.html
+++ b/travel_together_app/travel_together/templates/main/index.html
@@ -1,22 +1,29 @@
 {% extends 'base.html' %}
 {% block head %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}"/>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}"/>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
 
 
 {% block content %}
 <div class="container">
+  <div id="formPopupOverlay" style="display:none;"></div>
+
+  <div id="formPopupModal" style="display:none;">
+      <div id="formPopupContent">
+          {% include 'main/trip_form.html' %}
+      </div>
+      <button id="closeFormPopup">Close</button>
+  </div>
+</div>
+
   <div class="top-container">
     <div class="trapezoid-overlay">
       <h1>Welcome!</h1>
       <p>Start your great adventure now.</p>
-
-      <a href="/form">
-        <button class="primary-button">Create a new trip!</button>
-      </a>
-      <a href="/browse">
-        <button class="secondary-button">Browse trips</button>
-      </a>
+      <button class="primary-button" id="openFormPopup">Create a new trip!</button>
+      <button class="secondary-button">Browse trips</button>
     </div>
 
     <img src="../../static/resources/index-background.jpeg"/>
