--- a/travel_together_app/travel_together/templates/auth/signup.html
+++ b/travel_together_app/travel_together/templates/auth/signup.html
@@ -20,7 +20,12 @@
                 <input type="password" name="password" placeholder="Password" required />
                 <input type="password" name="password_repeat" placeholder="Repeat password" required />
             </div>
-            <input class="submit-button" type="submit" value="Next"/>
+            <div class="flash-messages">
+                {% for message in get_flashed_messages() %}
+                <p class="flash-message">{{ message }}</p>
+                {% endfor %}
+            </div>
+            <input class="submit-button" type="submit" value="Next" />
         </form>
         <p>Already have an account? <a href="{{ url_for('auth.login') }}">Log in</a></p>
     </div>
@@ -28,13 +33,8 @@
     <div class="info-container">
         <img src="../../static/resources/logo-full.png" class="info-image" />
         <h1>Welcome to Travel together&trade;</h1>
-        <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like you.</p>
+        <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like
+            you.</p>
     </div>
 </div>
-
-    {% with messages = get_flashed_messages() %}
-        {% for message in messages %}
-        <div class="notification">{{ message }}</div>
-        {% endfor %}
-    {% endwith %}
 {% endblock %}
