--- a/travel_together_app/travel_together/templates/auth/login.html
+++ b/travel_together_app/travel_together/templates/auth/login.html
@@ -1,30 +1,36 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>Login - Travel together</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}"/>
+<title>Login - Travel together</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}" />
 {% endblock %}
 
 {% if current_user.is_authenticated: %}
-    <div>User: {{current_user.name}}</div>
+<div>User: {{current_user.name}}</div>
 {% endif %}
 {% block content %}
-    <div class="main-container">
-        <div class="login-container">
-            <h2>Log In</h2>
-            <form class="form-container" action="{{ url_for('auth.login_post') }}" method="post">
-                <div class="credential-inputs">
-                    <input type="email" name="email" placeholder="Email" required/>
-                    <input type="password" name="password" placeholder="Password" required/>
-                </div>
-                <input type="submit" value="Log In"/>
-            </form>
-            <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up</a></p>
-        </div>
-        <div class="info-container">
-            <img src="../../static/resources/logo-full.png" class="info-image"/>
-            <h1>Welcome to Travel together&trade;</h1>
-            <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like you.</p>
-        </div>
+<div class="main-container">
+    <div class="login-container">
+        <h2>Log In</h2>
+        <form class="form-container" action="{{ url_for('auth.login_post') }}" method="post">
+            <div class="credential-inputs">
+                <input type="email" name="email" placeholder="Email" required />
+                <input type="password" name="password" placeholder="Password" required />
+            </div>
+            <div class="flash-messages">
+                {% for message in get_flashed_messages() %}
+                <p class="flash-message">{{ message }}</p>
+                {% endfor %}
+            </div>
+            <input type="submit" value="Log In" />
+        </form>
+        <p>Don't have an account? <a href="{{ url_for('auth.signup') }}">Sign up</a></p>
     </div>
+    <div class="info-container">
+        <img src="../../static/resources/logo-full.png" class="info-image" />
+        <h1>Welcome to Travel together&trade;</h1>
+        <p>Plan trips, share unforgettable adventures, and meet fellow travelers who love discovering places just like
+            you.</p>
+    </div>
+</div>
 {% endblock %}
