--- a/travel_together_app/travel_together/templates/main/trip.html
+++ b/travel_together_app/travel_together/templates/main/trip.html
@@ -59,6 +59,7 @@
 <div class="single_trip_container">
   <img class="trip-photo" src="{{ url_for('static', filename='resources/example-trip-1.jpg') }}" alt="Avatar">
   <h2 class="trip-title">{{ trip.title }}</h2>
+  <button id="modify-trip-button">Modify Trip</button>
   <p class="trip-time-created">Created {{ trip.timestamp|time_ago }} by
     <a href="{{ url_for('main.profile', user_id=trip.creator.id) }}" style="text-decoration: none; color: inherit;">
       {{ trip.creator.name }}
